Fixed Spacing and Removed Example p Tag

--- a/src/Containers/CategoryListing/CategoryAppListing.module.css
+++ b/src/Containers/CategoryListing/CategoryAppListing.module.css
@@ -13,7 +13,7 @@
 .app-container {
     background-color: transparent;
     border: 0px;
-    margin: .25rem .65rem;
+    margin: 0rem .65rem;
     width: 6rem;
     align-items: stretch;
 }
@@ -69,8 +69,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 3.5rem;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    height: 2.5rem;
 }
 
 .app-info {
